--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,10 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    defaultConfig {
+        multiDexEnabled true
+    }
     compileSdkVersion 28
 
     sourceSets {
@@ -64,4 +68,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    compile 'com.android.support:multidex:1.0.1'
 }
+
