--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^4.1.2
   intl: ">=0.14.0"
   percent_indicator: ^2.1.3
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
