--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.1
-  cloud_firestore: ^0.13.6
+  cloud_firestore: ^0.13.4+2
   provider: ^4.1.2
   intl: ">=0.14.0"
   percent_indicator: ^2.1.3
