--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   percent_indicator: ^2.1.3
   cached_network_image: ^2.2.0+1
   flutter_local_notifications: ^3.0.2
+  timezone: ^0.5.9
+  flutter_picker: ^1.1.5
+  flutter_native_timezone: ^1.0.4
 
 dev_dependencies:
   flutter_test:
