--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wloss
-description: A new Flutter project.
+description: Calori counter and Weight Tracker.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,7 +36,7 @@ dependencies:
   flutter_local_notifications: ^3.0.2
   timezone: ^0.5.9
   flutter_picker: ^1.1.5
-  flutter_native_timezone: ^1.0.4
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
