--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,14 +29,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
-  provider: ^4.1.2
+  provider: ^4.3.3
   intl: ">=0.14.0"
   percent_indicator: ^2.1.3
-  cached_network_image: ^2.2.0+1
+  cached_network_image: ^2.5.1
   flutter_local_notifications: ^3.0.2
   timezone: ^0.5.9
   flutter_picker: ^2.0.2
   flutter_native_timezone: ^2.0.0
+  http: ^0.12.2
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
