--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   intl: ">=0.14.0"
   percent_indicator: ^2.1.3
   cached_network_image: ^2.5.1
-  flutter_local_notifications: ^3.0.2
-  timezone: ^0.5.9
+  flutter_local_notifications: ^4.0.1+2
+  timezone: ^0.6.1
   flutter_picker: ^2.0.2
   flutter_native_timezone: ^2.0.0
   http: ^0.12.2
